update parallel communicator prototype

--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/u02/thanhhm/research-idea\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%cd ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,44 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Block(\n",
-       "\tinputs=ThreadQueue(\n",
-       "\t\tpersistent=2,\n",
-       "\t\tn=1,\n",
-       "\t),\n",
-       "\toutputs=ThreadQueue(\n",
-       "\t\tpersistent=False,\n",
-       "\t\tn=1,\n",
-       "\t),\n",
-       ")"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Block(pp.communicators.BlockPrototype):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        inputs = queues.ThreadQueue(2)\n",
-    "        outputs = queues.ThreadQueue()\n",
-    "        super().__init__(inputs, outputs)\n",
     "    \n",
     "    def on_received(self, data):\n",
     "        time.sleep(0.5)\n",
-    "        return f'{data:05d}'\n",
-    "    \n",
-    "block = Block()\n",
-    "block.run()\n",
-    "block"
+    "        return f'{data:05d}'"
    ]
   },
   {
@@ -80,7 +43,10 @@
     "class Caller(pp.communicators.CallerPrototype):\n",
     "\n",
     "    def __init__(self):\n",
-    "        super().__init__(block.inputs, block.outputs)\n",
+    "        super().__init__()\n",
+    "        self.block = Block()\n",
+    "\n",
+    "        self.register_inout(queues.ThreadQueue(), block=queues.ThreadQueue(n=4))\n",
     "    \n",
     "    def on_received(self, data):\n",
     "        print(data)\n",
@@ -88,6 +54,25 @@
     "caller = Caller()\n",
     "caller.run()\n",
     "caller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(20):\n",
+    "    caller.put(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caller.release()"
    ]
   },
   {
