--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -114,23 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "{'huhu': HUHU(\n",
-       " \tname='a',\n",
-       " \tage='loli',\n",
-       " ),\n",
-       " 'hehe': HEHE(\n",
-       " \thuhu=HUHU(\n",
-       " \t\tname='a',\n",
-       " \t\tage='loli',\n",
-       " \t),\n",
-       " ),\n",
-       " 'hihi': HEHE(\n",
-       " \thuhu=HUHU(\n",
-       " \t\tname='a',\n",
-       " \t\tage='loli',\n",
-       " \t),\n",
-       " ),\n",
-       " 'haha': HAHA(\n",
+       "{'haha': HAHA(\n",
        " \thehe=HEHE(\n",
        " \t\thuhu=HUHU(\n",
        " \t\t\tname='a',\n",
@@ -150,7 +134,7 @@
     }
    ],
    "source": [
-    "objs = injector.run({'name': 'a', 'age': 'loli'})\n",
+    "objs = injector.run({'name': 'a', 'age': 'loli'}, 'haha')\n",
     "objs"
    ]
   },
