--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,30 +40,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "haha(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        return x + 1\n",
+    "\n",
+    "    def __get__(self, instance, owner):\n",
+    "        return self.__call__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class B:\n",
+    "    \n",
+    "    def hehe(self, x):\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B.hehe = A()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TimeIO(name='haha', duration=1.1920928955078125e-06, args=[], kwargs={})\n",
-      "FuncIO(name='haha', args=(4,), kwargs={}, outputs=5)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "9"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "haha(4)"
+    "B().hehe(8)"
    ]
   },
   {
