--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,79 +28,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@plog.FunctionLogger(log_func=print)\n",
+    "@plog.FunctionLogger()\n",
     "@plog.Timer()\n",
+    "@plog.ExceptionLogger(raise_on_exception=False, on_exception_return=2)\n",
     "def haha(x):\n",
+    "    if x == 2:\n",
+    "        raise Exception('hehe')\n",
     "    return x + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "haha(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class A:\n",
-    "\n",
-    "    def __call__(self, x):\n",
-    "        return x + 1\n",
-    "\n",
-    "    def __get__(self, instance, owner):\n",
-    "        return self.__call__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "class B:\n",
-    "    \n",
-    "    def hehe(self, x):\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B.hehe = A()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
+      "TimeIO(name='haha', duration=6.365776062011719e-05, args=[], kwargs={})\n",
+      "FuncIO(name='haha', args=(2,), kwargs={}, outputs=2)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "9"
+       "2"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "B().hehe(8)"
+    "haha(2)"
    ]
   },
   {
