--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -19,14 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import plasma.parallel_processing as pp\n",
-    "import time\n",
-    "\n",
-    "from plasma.parallel_processing import queues"
+    "import time"
    ]
   },
   {
@@ -35,11 +33,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Block(pp.communicators.BlockPrototype):\n",
-    "    \n",
-    "    def on_received(self, data):\n",
-    "        time.sleep(0.5)\n",
-    "        return f'{data:05d}'"
+    "def compute(data):\n",
+    "    time.sleep(1)\n",
+    "    return f'{data:05d}'\n",
+    "\n",
+    "def print_pass(data):\n",
+    "    print(data)\n",
+    "    return data"
    ]
   },
   {
@@ -50,10 +50,9 @@
     {
      "data": {
       "text/plain": [
-       "Caller(\n",
-       "\tblock=Block(),\n",
-       "\tarray=<ListProxy object, typeid 'list' at 0x7fdfdf591070>,\n",
-       ")"
+       "computation-<function compute at 0x7f1817c42840>\n",
+       "printer-<function print_pass at 0x7f1817c428e0>\n",
+       "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
      "execution_count": 4,
@@ -62,27 +61,60 @@
     }
    ],
    "source": [
-    "class Caller(pp.communicators.CallerPrototype):\n",
+    "class Caller(pp.communicators.Flow):\n",
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.block = Block()\n",
     "        manager = pp.mp.Manager()\n",
-    "        self.array = manager.list()\n",
-    "        self.register_inout(queues.ProcessQueue(), block=queues.ProcessQueue(n=4))\n",
-    "    \n",
-    "    def on_received(self, data):\n",
-    "        self.array.append(int(data))\n",
-    "        print(data)\n",
+    "\n",
+    "        self.computation = compute\n",
+    "        self.printer = print_pass\n",
+    "        self.aggregator = pp.communicators.Aggregator(20, 0.5, manager)\n",
+    "        self.registerIOs(computation=pp.queues.ProcessQueue(4), printer=pp.queues.ProcessQueue(), aggregator=pp.queues.ProcessQueue())\n",
     "\n",
     "caller = Caller()\n",
-    "caller.run()\n",
     "caller"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000\n",
+      "00001\n",
+      "00003\n",
+      "00002\n",
+      "00004\n",
+      "00005\n",
+      "00006\n",
+      "00007\n",
+      "00008\n",
+      "00009\n",
+      "00010\n",
+      "00011\n",
+      "00013\n",
+      "00012\n",
+      "00014\n",
+      "00015\n",
+      "00016\n",
+      "00017\n",
+      "00018\n",
+      "00019\n"
+     ]
+    }
+   ],
+   "source": [
+    "caller.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,58 +124,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00001\n",
-      "00000\n",
-      "00002\n",
-      "00003\n",
-      "00004\n",
-      "00005\n",
-      "00006\n",
-      "00007\n",
-      "00008\n",
-      "00009\n",
-      "00010\n",
-      "00011\n",
-      "00012\n",
-      "00013\n",
-      "00014\n",
-      "00015\n",
-      "00017\n",
-      "00016\n",
-      "00018\n",
-      "00019\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c0485185f8a44aff97d95e51baef0b44",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
+   "source": [
+    "caller.aggregator.wait()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['00000',\n",
+       " '00001',\n",
+       " '00003',\n",
+       " '00002',\n",
+       " '00004',\n",
+       " '00005',\n",
+       " '00006',\n",
+       " '00007',\n",
+       " '00008',\n",
+       " '00009',\n",
+       " '00010',\n",
+       " '00011',\n",
+       " '00013',\n",
+       " '00012',\n",
+       " '00014',\n",
+       " '00015',\n",
+       " '00016',\n",
+       " '00017',\n",
+       " '00018',\n",
+       " '00019']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caller.aggregator.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "caller.release()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 0, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 16, 18, 19]"
+       "Aggregator(\n",
+       "\tfinished=0,\n",
+       "\ttotal=20,\n",
+       "\tsleep=0.5,\n",
+       ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(caller.array)"
+    "caller.aggregator"
    ]
   },
   {
