--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,8 @@
     {
      "data": {
       "text/plain": [
-       "computation-<function compute at 0x7f1817c42840>\n",
-       "printer-<function print_pass at 0x7f1817c428e0>\n",
+       "computation-<function compute at 0x7f342c6f7ce0>\n",
+       "printer-<function print_pass at 0x7f342c6f7d80>\n",
        "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
@@ -78,27 +78,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caller.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(20):\n",
+    "    caller.put(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a11689dd0f204bd18998da825fd7b256",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "00000\n",
-      "00001\n",
       "00003\n",
+      "00001\n",
       "00002\n",
       "00004\n",
       "00005\n",
       "00006\n",
       "00007\n",
-      "00008\n",
       "00009\n",
+      "00008\n",
       "00010\n",
       "00011\n",
-      "00013\n",
       "00012\n",
+      "00013\n",
       "00014\n",
       "00015\n",
       "00016\n",
@@ -109,65 +142,31 @@
     }
    ],
    "source": [
-    "caller.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(20):\n",
-    "    caller.put(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0485185f8a44aff97d95e51baef0b44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/20 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "caller.aggregator.wait()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['00000',\n",
-       " '00001',\n",
        " '00003',\n",
+       " '00001',\n",
        " '00002',\n",
        " '00004',\n",
        " '00005',\n",
        " '00006',\n",
        " '00007',\n",
-       " '00008',\n",
        " '00009',\n",
+       " '00008',\n",
        " '00010',\n",
        " '00011',\n",
-       " '00013',\n",
        " '00012',\n",
+       " '00013',\n",
        " '00014',\n",
        " '00015',\n",
        " '00016',\n",
@@ -176,7 +175,7 @@
        " '00019']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +205,11 @@
        "\tfinished=0,\n",
        "\ttotal=20,\n",
        "\tsleep=0.5,\n",
+       "\tignore_none=True,\n",
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
