--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -35,10 +35,10 @@
    "source": [
     "def compute(data):\n",
     "    time.sleep(1)\n",
-    "    return f'{data:05d}'\n",
+    "    return data * 2\n",
     "\n",
     "def print_pass(data):\n",
-    "    print(data)\n",
+    "    print(f'{data / 2**5}')\n",
     "    return data"
    ]
   },
@@ -50,8 +50,14 @@
     {
      "data": {
       "text/plain": [
-       "computation-<function compute at 0x7f342c6f7ce0>\n",
-       "printer-<function print_pass at 0x7f342c6f7d80>\n",
+       "compute1-<class '__main__.Inner'>\n",
+       "\tcompute1-<function compute at 0x7f53d6ca5f80>\n",
+       "\tcompute2-<function compute at 0x7f53d6ca5f80>\n",
+       "compute2-<function compute at 0x7f53d6ca5f80>\n",
+       "compute3-<class '__main__.Inner'>\n",
+       "\tcompute1-<function compute at 0x7f53d6ca5f80>\n",
+       "\tcompute2-<function compute at 0x7f53d6ca5f80>\n",
+       "printer-<function print_pass at 0x7f53d6ca6700>\n",
        "aggregator-<class 'plasma.parallel_processing.communicators.aggregator.Aggregator'>"
       ]
      },
@@ -61,38 +67,43 @@
     }
    ],
    "source": [
-    "class Caller(pp.communicators.Flow):\n",
+    "class Outer(pp.communicators.Flow):\n",
     "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        manager = pp.mp.Manager()\n",
     "\n",
-    "        self.computation = compute\n",
+    "        self.compute1 = Inner()\n",
+    "        self.compute2 = compute\n",
+    "        self.compute3 = Inner()\n",
     "        self.printer = print_pass\n",
     "        self.aggregator = pp.communicators.Aggregator(20, 0.5, manager)\n",
-    "        self.registerIOs(computation=pp.queues.ProcessQueue(4), printer=pp.queues.ProcessQueue(), aggregator=pp.queues.ProcessQueue())\n",
     "\n",
-    "caller = Caller()\n",
+    "        self.registerIOs(\n",
+    "            compute1={\n",
+    "                'compute1': pp.queues.ProcessQueue(2),\n",
+    "                'compute2': pp.queues.ProcessQueue(2),\n",
+    "            },\n",
+    "            compute2=pp.queues.ProcessQueue(2),\n",
+    "            compute3={\n",
+    "                'compute1': pp.queues.ProcessQueue(2),\n",
+    "                'compute2': pp.queues.ProcessQueue(2),\n",
+    "            },\n",
+    "            printer=pp.queues.ProcessQueue(),\n",
+    "            aggregator=pp.queues.ProcessQueue(),\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "class Inner(pp.communicators.Flow):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.compute1 = compute\n",
+    "        self.compute2 = compute\n",
+    "\n",
+    "caller = Outer()\n",
     "caller"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "caller.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(20):\n",
-    "    caller.put(i)"
    ]
   },
   {
@@ -103,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a11689dd0f204bd18998da825fd7b256",
+       "model_id": "a7b7283502ae4021a9ea1d5dc3cfbb17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,104 +129,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00000\n",
-      "00003\n",
-      "00001\n",
-      "00002\n",
-      "00004\n",
-      "00005\n",
-      "00006\n",
-      "00007\n",
-      "00009\n",
-      "00008\n",
-      "00010\n",
-      "00011\n",
-      "00012\n",
-      "00013\n",
-      "00014\n",
-      "00015\n",
-      "00016\n",
-      "00017\n",
-      "00018\n",
-      "00019\n"
+      "0.0\n",
+      "1.0\n",
+      "2.0\n",
+      "3.0\n",
+      "4.0\n",
+      "5.0\n",
+      "6.0\n",
+      "7.0\n",
+      "8.0\n",
+      "9.0\n",
+      "10.0\n",
+      "11.0\n",
+      "12.0\n",
+      "13.0\n",
+      "14.0\n",
+      "15.0\n",
+      "16.0\n",
+      "17.0\n",
+      "18.0\n",
+      "19.0\n",
+      "[0, 32, 64, 96, 128, 160, 192, 224, 256, 288, 320, 352, 384, 416, 448, 480, 512, 544, 576, 608]\n"
      ]
     }
    ],
    "source": [
-    "caller.aggregator.wait()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['00000',\n",
-       " '00003',\n",
-       " '00001',\n",
-       " '00002',\n",
-       " '00004',\n",
-       " '00005',\n",
-       " '00006',\n",
-       " '00007',\n",
-       " '00009',\n",
-       " '00008',\n",
-       " '00010',\n",
-       " '00011',\n",
-       " '00012',\n",
-       " '00013',\n",
-       " '00014',\n",
-       " '00015',\n",
-       " '00016',\n",
-       " '00017',\n",
-       " '00018',\n",
-       " '00019']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "caller.aggregator.results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "caller.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Aggregator(\n",
-       "\tfinished=0,\n",
-       "\ttotal=20,\n",
-       "\tsleep=0.5,\n",
-       "\tignore_none=True,\n",
-       ")"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "caller.aggregator"
+    "with caller:\n",
+    "    for i in range(20):\n",
+    "        caller.put(i)\n",
+    "    \n",
+    "    caller.aggregator.wait()\n",
+    "    print(caller.aggregator.results)"
    ]
   },
   {
