add start time to timer

--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
      "output_type": "stream",
      "text": [
       "ExIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
-      "TimeIO(name='haha', duration=6.365776062011719e-05, args=[], kwargs={})\n",
+      "TimeIO(name='haha', start=datetime.datetime(2024, 12, 11, 12, 4, 1, 685822), duration=datetime.timedelta(microseconds=74), args=[], kwargs={})\n",
       "FuncIO(name='haha', args=(2,), kwargs={}, outputs=2)\n"
      ]
     },
@@ -61,7 +61,7 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
