quick fix to timeio

--- a/tests/test_logging.ipynb
+++ b/tests/test_logging.ipynb
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "@plog.FunctionLogger()\n",
-    "@plog.Timer()\n",
+    "@plog.Timer(log_inputs=True)\n",
     "@plog.ExceptionLogger(raise_on_exception=False, on_exception_return=2)\n",
     "def haha(x):\n",
     "    if x == 2:\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
      "output_type": "stream",
      "text": [
       "ExIO(name='haha', args=(2,), kwargs={}, exception=Exception('hehe'))\n",
-      "TimeIO(name='haha', start=datetime.datetime(2024, 12, 11, 12, 4, 1, 685822), duration=datetime.timedelta(microseconds=74), args=[], kwargs={})\n",
+      "TimeIO(name='haha', timer=(start=2024-12-11 12:29:56.779316, end=2024-12-11 12:29:56.779364, duration=0:00:00.000048), args=(2,), kwargs={})\n",
       "FuncIO(name='haha', args=(2,), kwargs={}, outputs=2)\n"
      ]
     },
@@ -61,7 +61,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
