improve search engine

--- a/tests/test_search_engine.ipynb
+++ b/tests/test_search_engine.ipynb
@@ -11,36 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import plasma.search_engines as ses\n",
     "import pandas as pd\n",
-    "import plasma.logging as plogging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_feather('/u02/thanhhm/xproject/as/databases/icd10.feather')\n",
-    "engine = ses.GraphMatcher(\n",
-    "    df['name'], \n",
-    "    group_splitter='([^:\\n;?!.()]+)',\n",
-    "    top_k=5\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from plasma.search_engines.path_walker_2 import PathWalker"
+    "import plasma.logging as plogging\n",
+    "\n",
+    "from scipy.stats import hmean"
    ]
   },
   {
@@ -49,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "old_walker = engine.path_walker\n",
-    "new_path_walker = PathWalker(engine.path_walker.threshold, engine._graph, engine._data)"
+    "df = pd.read_pickle('/u02/duy/workspace/xproject_as/databases/dav_supplement_db.pkl')\n",
+    "engine = ses.GraphMatcher(df['name'], top_k=5)"
    ]
   },
   {
@@ -59,7 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = 'Tổn thương nông tác động nhiều vùng cơ thể (Đa chấn thương, vết thương cẳng chân trái do tai nạn giao thông)'"
+    "query = 'Tổn thương nông tác động nhiều vùng cơ thể (Đa chấn thương, vết thương cẳng chân trái do tai nạn giao thông)'\n",
+    "#query = 'bronchitis'"
    ]
   },
   {
@@ -68,9 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with plogging.Timer(print) as timer:\n",
-    "    new_results = engine.run(query)\n",
-    "timer.duration"
+    "results = engine.run(query)\n",
+    "results"
    ]
   },
   {
@@ -78,9 +57,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "query[64:80]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -99,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
