--- a/tests/test_caller_block.ipynb
+++ b/tests/test_caller_block.ipynb
@@ -164,10 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hehe\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = None\n",
+    "try:\n",
+    "    raise Exception('hehe')\n",
+    "except Exception as ex:\n",
+    "    e = ex\n",
+    "\n",
+    "print(e)"
+   ]
   }
  ],
  "metadata": {
@@ -186,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
