add process based object inquirer + add better check for data

--- a/tests/test_proxy.ipynb
+++ b/tests/test_proxy.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "proxy = pp.communicators.Proxy([])\n",
+    "proxy = pp.communicators.SharedObject([])\n",
     "proxy"
    ]
   },
