--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -21,7 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from plasma.parallel_processing import queues"
    ]
@@ -43,10 +52,39 @@
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0000000001\n",
+      "\n",
+      "0000200003\n",
+      "\n",
+      "0000400005\n",
+      "\n",
+      "0000600007\n",
+      "\n",
+      "0000800009\n",
+      "\n",
+      "0001000011\n",
+      "\n",
+      "0001200013\n",
+      "\n",
+      "0001400015\n",
+      "\n",
+      "0001600017\n",
+      "\n",
+      "0001800019\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "q = queues.ProcessQueue(n=2)\n",
+    "q = queues.ProcessQueue(n=2)\\\n",
+    "    .register_callback(lambda x: f'{x:05d}')\\\n",
+    "    .chain(print)\\\n",
+    "    .run()\n",
     "q"
    ]
   },
@@ -63,44 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00000\n",
-      "0000100002\n",
-      "\n",
-      "0000400003\n",
-      "\n",
-      "0000500006\n",
-      "\n",
-      "0000700008\n",
-      "\n",
-      "0000900010\n",
-      "\n",
-      "0001100012\n",
-      "\n",
-      "0001300014\n",
-      "\n",
-      "0001500016\n",
-      "\n",
-      "0001700018\n",
-      "\n",
-      "00019\n"
-     ]
-    }
-   ],
-   "source": [
-    "q.register_callback(lambda x: f'{x:05d}')\n",
-    "q.chain(print)\n",
-    "q.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
