update configs factory

--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -21,57 +21,65 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea/.env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "import plasma.functional as F"
+    "import plasma.functional as F\n",
+    "import plasma.meta as meta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class HAHA(F.BaseConfigs):\n",
-    "\n",
-    "    class HEHE(F.BaseConfigs):\n",
-    "        haha = 8\n",
-    "    \n",
-    "    haha = 5\n",
-    "    hehe = 4\n",
-    "    huhu = HEHE()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = HAHA()\n",
-    "a.haha = 4\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = F.SequentialPipe(w=HAHA())"
+    "factory = meta.ObjectFactory()\n",
+    "factory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "registered haha: <class '__main__.HAHA'>\n",
+      "registered hehe: <class '__main__.HEHE'>\n"
+     ]
+    }
+   ],
    "source": [
-    "class Check(F.AutoPipe):\n",
+    "@factory.register('haha')\n",
+    "class HAHA(F.BaseConfigs):\n",
+    "    haha = 5\n",
+    "    hehe = 4\n",
     "\n",
-    "    def run(self, x:int):\n",
-    "        return x + 5"
+    "@factory.register('hehe')\n",
+    "class HEHE(F.BaseConfigs):\n",
+    "    haha = 8"
    ]
   },
   {
@@ -82,7 +90,16 @@
     {
      "data": {
       "text/plain": [
-       "Check()"
+       "{'haha': HAHA(\n",
+       " \thaha=5,\n",
+       " \thehe=4,\n",
+       " \thihi=HIHI(\n",
+       " \t\thihi=8,\n",
+       " \t),\n",
+       " ),\n",
+       " 'hehe': HEHE(\n",
+       " \thaha=8,\n",
+       " )}"
       ]
      },
      "execution_count": 5,
@@ -91,8 +108,8 @@
     }
    ],
    "source": [
-    "a = Check()\n",
-    "a"
+    "configs_dict = meta.ConfigsDict(factory)\n",
+    "configs_dict"
    ]
   },
   {
@@ -100,9 +117,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "a()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
